# fawkes

./: .gitignore  BUG_FIXES_SUMMARY.md  CHANGES.md  DIFFERENTIAL_FUZZING_COMPLETE.md  FEATURE_1_COMPLETE.md  FEATURE_ROADMAP.md  LICENSE  README.md  RECOMPILE_AGENTS.md  __init__.py  config.py  fawkes-arch  fawkes-auth  fawkes-bench  fawkes-corpus  fawkes-diff  fawkes-replay  fawkes-scheduler  fawkes-snapshot  fawkes-stats  fawkes-triage  fuzzer.py  gdb.py  globals.py  harness.py  logger.py  main.py  monitor.py  nbd.py  paths.py  qemu.py  replay.py  setup_qemu_env.sh  test_auth.sh  test_differential.sh  test_kernel_fuzzing.py  test_network_fuzzing.py  test_replay.sh  test_sanitizers.py  test_scheduler.sh  (+5 more)
web/: README.md  pyproject.toml
web/api/: __init__.py  database.py  executor.py  main.py  websocket.py
web/api/models/: __init__.py  crash.py  job.py  user.py  vm_setup.py  worker.py
web/api/routes/: architectures.py  auth.py  config.py  crashes.py  images.py  isos.py  jobs.py  paths.py  snapshots.py  system.py  vm_configs.py  vm_install.py  vm_runner.py  vms.py  workers.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/frontend/src/: App.jsx  index.css
web/frontend/src/pages/: ConfigPage.jsx  CrashesPage.jsx  DashboardPage.jsx  JobsPage.jsx  LoginPage.jsx  VMRunnerPage.jsx  VMSetupPage.jsx  VMViewerPage.jsx  (+1 more)
web/tests/: __init__.py  conftest.py  test_architectures.py  test_auth.py  test_isos_images.py  test_jobs_crashes_workers.py  test_paths.py  test_system.py  test_vm_configs.py  test_vm_runner.py
(+132 files in other folders)
